Some name changes

--- a/src/log4cxx.properties
+++ b/src/log4cxx.properties
@@ -1,20 +1,20 @@
-# Set root logger level to DEBUG and its appenders to A1 and R.
-log4j.rootLogger=DEBUG, A1, R
+# Set root logger level to DEBUG and its appenders to stdout and roll.
+log4j.rootLogger=DEBUG, stdout, roll
 
-# A1 is set to be a ConsoleAppender using PatternLayout
-log4j.appender.A1=org.apache.log4j.ConsoleAppender
-log4j.appender.A1.layout=org.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
+# appender stdout is set to be a ConsoleAppender using PatternLayout
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
-# R is a RollingFile
-log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.R.File=ctrace.log
-log4j.appender.R.MaxFileSize=1000KB
-log4j.appender.R.MaxBackupIndex=1
-log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
+# appender roll is a RollingFile
+log4j.appender.roll=org.apache.log4j.RollingFileAppender
+log4j.appender.roll.File=ctrace.log
+log4j.appender.roll.MaxFileSize=1000KB
+log4j.appender.roll.MaxBackupIndex=1
+log4j.appender.roll.layout=org.apache.log4j.PatternLayout
+log4j.appender.roll.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
-log4j.logger.ctrace=INFO
+log4j.logger.ctrace=WARN
 #log4j.logger.ctrace.keyboard_controller.cpp=INFO
 #log4j.logger.ctrace.ppia.cpp=INFO
 #log4j.logger.ctrace.atom.cpp=INFO
