--- a/src/log4cxx.properties
+++ b/src/log4cxx.properties
@@ -15,6 +15,7 @@ log4j.appender.roll.layout=org.apache.log4j.PatternLayout
 log4j.appender.roll.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
 log4j.logger.ctrace=WARN
+log4j.logger.ctrace.config_xml.cpp=DEBUG
 #log4j.logger.ctrace.keyboard_controller.cpp=INFO
 #log4j.logger.ctrace.ppia.cpp=INFO
 #log4j.logger.ctrace.atom.cpp=INFO
