Handles libraries better

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,12 @@
 /.project
 /src/*.o
 /src/atom
+/src/libatom.a
 /src/atom.rnc
 /src/atom.xsd
 /src/relaxng.rnc
 /src/relaxng.xsd
+/src/local.xsd
 /src/html
 /src/.cproject
 /src/.project
