--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,4 +1,17 @@
 .sconsign.dblite
-/cctrace.log
-/ctrace.log
-/ctrace.log.1
+ctrace.log
+ctrace.log.1
+atom
+libatom.a
+*.o
+atom.rnc
+atom.xsd
+relaxng.rnc
+relaxng.xsd
+local.xsd
+html
+.project
+.cproject
+.pydevproject
+.settings
+.externalToolBuilders
