--- a/src/SConstruct
+++ b/src/SConstruct
@@ -18,13 +18,15 @@ common_env['LINKFLAGS'] = r'-pthread'
 
 add_library(common_env, 'liblog4cxx')
 
-common_env['BUILDERS']['rng2rnc'] = Builder(action='trang -I rng -O rnc $SOURCE $TARGET 2>/dev/null', suffix='rnc')
+common_env['BUILDERS']['rng2rnc'] = Builder(action='trang -I rng -O rnc $SOURCE $TARGET', suffix='rnc')
 common_env.rng2rnc('relaxng.rnc', 'relaxng.rng')
 common_env.rng2rnc('atom.rnc', 'atom.rng')
+common_env.rng2rnc('emulator.rnc', 'emulator.rng')
 
-common_env['BUILDERS']['rng2xsd'] = Builder(action='trang -I rng -O xsd $SOURCE $TARGET 2>/dev/null', suffix='xsd')
+common_env['BUILDERS']['rng2xsd'] = Builder(action='trang -I rng -O xsd $SOURCE $TARGET', suffix='xsd')
 common_env.rng2xsd('relaxng.xsd', 'relaxng.rng')
 common_env.rng2xsd('atom.xsd', 'atom.rng')
+common_env.rng2xsd('emulator.xsd', 'emulator.rng')
 
 libatom_env = common_env.Clone()
 atomlib = libatom_env.StaticLibrary(r'atom', [ r'memory.cpp'
