--- a/design/SConscript
+++ b/design/SConscript
@@ -1,11 +1,5 @@
 Import('common_env')
 common_env['BUILDERS']['uxf2png'] = uxf2png
 
-common_env.uxf2png('cpu')
-common_env.uxf2png('KeyboardInput')
-common_env.uxf2png('memory')
-common_env.uxf2png('model_facade')
-common_env.uxf2png('MVC')
-common_env.uxf2png('OutputSequences')
-common_env.uxf2png('ScreenGraphicsView')
-common_env.uxf2png('system2')
+for fn in common_env.Glob('*.uxf', strings=True):
+    common_env.uxf2png(fn[:-4])
