Added builder to plot.bmp and consolidated .gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,22 @@
-/.cproject
-/.project
-/Design/*.png
 *~
-/.sconsign.dblite
+.cproject
+.project
+.pydevproject
+.settings
+.externalToolBuilders
+.sconsign.dblite
+/Design/*.png
+/src/plot.bmp
+/src/ctrace.log
+/src/ctrace.log.1
+/src/atom
+/src/libatom.a
+/src/**/*.o
+/src/atom.rnc
+/src/atom.xsd
+/src/relaxng.rnc
+/src/relaxng.xsd
+/src/emulator.rnc
+/src/emulator.xsd
+/src/local.xsd
+/src/html
