--- a/src/SConscript
+++ b/src/SConscript
@@ -3,14 +3,10 @@ Import('common_env')
 # Ancilliaries
 
 common_env['BUILDERS']['rng2rnc'] = rng2rnc
-common_env.rng2rnc('relaxng')
-common_env.rng2rnc('atom')
 common_env.rng2rnc('emulator')
 
-common_env['BUILDERS']['rng2xsd'] = rng2xsd
-common_env.rng2xsd('relaxng')
-common_env.rng2xsd('atom')
-common_env.rng2xsd('emulator')
+#common_env['BUILDERS']['rng2xsd'] = rng2xsd
+#common_env.rng2xsd('emulator')
 
 common_env.Command(r'plot.bmp', r'build_plot_bmp.py', "python3 $SOURCE $TARGET")
 
@@ -22,22 +18,22 @@ common_env['LINKFLAGS'] = r'-pthread'
 add_library(common_env, 'liblog4cxx')
 add_library(common_env, 'glibmm-2.4')
 
-libatom_env = common_env.Clone()
-ATOMLIB = libatom_env.StaticLibrary(r'atom', [ r'part.cpp'
-                                             , r'device.cpp'
-                                             , r'memory.cpp'
-                                             , r'ppia.cpp'
-                                             , r'cpu.cpp'
-                                             ])
+partslib_env = common_env.Clone()
+PARTSLIB = partslib_env.StaticLibrary(r'parts', [ r'part.cpp'
+                                                , r'device.cpp'
+                                                , r'memory.cpp'
+                                                , r'ppia.cpp'
+                                                , r'cpu.cpp'
+                                                ])
 
-atom_gui_sdl_env = common_env.Clone()
-add_library(atom_gui_sdl_env, 'sdl')
-add_library(atom_gui_sdl_env, 'libxml++-2.6')
+emulator_gui_sdl_env = common_env.Clone()
+add_library(emulator_gui_sdl_env, 'sdl')
+add_library(emulator_gui_sdl_env, 'libxml++-2.6')
 
-atom_gui_sdl_env.Program('atom', [ r'monitor_view.cpp'
-                                 , r'keyboard_controller.cpp'
-                                 , r'terminal.cpp'
-                                 , r'config_xml.cpp'
-                                 , r'main.cpp'
-                                 , ATOMLIB
-                                 ])
+emulator_gui_sdl_env.Program('emulator', [ r'monitor_view.cpp'
+                                         , r'keyboard_controller.cpp'
+                                         , r'terminal.cpp'
+                                         , r'config_xml.cpp'
+                                         , r'main.cpp'
+                                         , PARTSLIB
+                                         ])
