WIP: Build PartsBin correctly, but doesn't seem to start the atom

--- a/src/log4cxx.properties
+++ b/src/log4cxx.properties
@@ -14,6 +14,5 @@ log4j.appender.roll.MaxBackupIndex=1
 log4j.appender.roll.layout=org.apache.log4j.PatternLayout
 log4j.appender.roll.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
-log4j.logger.ctrace=DEBUG
-log4j.logger.ctrace.config_xml.cpp=DEBUG
+log4j.logger.ctrace=WARN
 
