WIP: inconsistent behaviour!

--- a/src/log4cxx.properties
+++ b/src/log4cxx.properties
@@ -15,4 +15,7 @@ log4j.appender.roll.layout=org.apache.log4j.PatternLayout
 log4j.appender.roll.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
 log4j.logger.ctrace=WARN
-
+log4j.logger.ctrace.part.cpp=DEBUG
+log4j.logger.ctrace.device.cpp=DEBUG
+log4j.logger.ctrace.memory.cpp=DEBUG
+log4j.logger.ctrace.cpu.cpp=DEBUG
