WIP: Still refactoring, but it is improving

--- a/src/SConscript
+++ b/src/SConscript
@@ -12,7 +12,7 @@ common_env.Command(r'plot.bmp', r'build_plot_bmp.py', "python3 $SOURCE $TARGET")
 
 # Main Build
 
-common_env['CCFLAGS']   = r'-Wall -g -pipe -std=c++11 -pthread -O0'
+common_env['CCFLAGS']   = r'-Wall -g -pipe -std=c++11 -pthread -O0 -DSERIALIZE_TO_DOT=1'
 common_env['LINKFLAGS'] = r'-pthread'
 
 add_library(common_env, 'liblog4cxx')
@@ -37,3 +37,4 @@ emulator_gui_sdl_env.Program('emulator', [ r'monitor_view.cpp'
                                          , r'main.cpp'
                                          , PARTSLIB
                                          ])
+
