WIP monitor_view is not working properly

--- a/src/log4cxx.properties
+++ b/src/log4cxx.properties
@@ -15,8 +15,8 @@ log4j.appender.roll.layout=org.apache.log4j.PatternLayout
 log4j.appender.roll.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
 log4j.logger.ctrace=WARN
-log4j.logger.part=INFO
-# log4j.logger.ctrace.part.cpp=DEBUG
-# log4j.logger.ctrace.device.cpp=DEBUG
-# log4j.logger.ctrace.memory.cpp=DEBUG
-# log4j.logger.ctrace.cpu.cpp=DEBUG
+log4j.logger.ctrace.cpu.cpp=INFO
+log4j.logger.ctrace.memory.cpp=INFO
+log4j.logger.ctrace.ppia.cpp=INFO
+log4j.logger.part=WARN
+log4j.logger.instruction=WARN
