Improved non-dot serialization and removed get_byte observation

--- a/src/log4cxx.properties
+++ b/src/log4cxx.properties
@@ -15,7 +15,7 @@ log4j.appender.roll.layout=org.apache.log4j.PatternLayout
 log4j.appender.roll.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
 log4j.logger.ctrace=WARN
-log4j.logger.ctrace.config_xml.cpp=INFO
+log4j.logger.ctrace.monitor_view.cpp=INFO
 #log4j.logger.ctrace.memory.cpp=INFO
 #log4j.logger.ctrace.ppia.cpp=INFO
 log4j.logger.part=WARN
