--- a/src/SConscript
+++ b/src/SConscript
@@ -22,7 +22,7 @@ PARTSLIB = partslib_env.StaticLibrary(r'parts', [ r'part.cpp'
                                                 ])
 
 emulator_gui_sdl_env = common_env.Clone()
-emulator_gui_sdl_env.ParseConfig("pkg-config --cflags --libs sdl libxml++-2.6")
+emulator_gui_sdl_env.ParseConfig("pkg-config --cflags --libs sdl2 libxml++-2.6")
 emulator_gui_sdl_env.Program('emulator', [ r'monitor_view.cpp'
                                          , r'keyboard_controller.cpp'
                                          , r'terminal.cpp'
