Added to build system

--- a/src/SConscript
+++ b/src/SConscript
@@ -5,7 +5,17 @@ Import('common_env')
 common_env.rnc2rng('emulator_strict')
 common_env.rnc2rng('emulator_permissive', ['emulator_permissive', 'emulator_strict'])
 
-common_env.Command(r'plot.bmp', r'build_plot_bmp.py', "python3 $SOURCE $TARGET")
+common_env.jing('emulator_strict.jing.txt', r'emulator_strict.rng')
+common_env.jing('emulator_permissive.jing.txt', r'emulator_permissive.rng')
+common_env.jing('atomrc.jing.txt', [r'emulator_strict.rng', r'atomrc.xml'])
+common_env.jing('atomrc_full.jing.txt', [r'emulator_strict.rng', r'atomrc_full.xml'])
+#common_env.Alias('test', r'emulator_strict.rng', 'jing $SOURCES 2>/dev/null')
+#common_env.Alias('test', r'emulator_permissive.rng', 'jing $SOURCES 2>/dev/null')
+#common_env.Alias('test', [r'emulator_strict.rng', r'atomrc.xml'], 'jing $SOURCES 2>/dev/null')
+#common_env.Alias('test', [r'emulator_strict.rng', r'atomrc_full.xml'], 'jing $SOURCES 2>/dev/null')
+
+common_env.Command(r'plot.bmp', r'build_plot_bmp.py',
+                   "python3 $SOURCE $TARGET")
 
 # Main Build
 
