--- a/src/log4cxx.properties
+++ b/src/log4cxx.properties
@@ -1,3 +1,6 @@
+# log4cxx.properties
+# Copyright 2016 Steve Palmer
+
 # Set root logger level to DEBUG and its appenders to stdout and roll.
 log4j.rootLogger=DEBUG, stdout, roll
 
