Added AtomStreamBuf as a device, decoupled from the terminal

--- a/src/SConscript
+++ b/src/SConscript
@@ -30,7 +30,7 @@ PARTSLIB = partslib_env.StaticLibrary(r'parts', [ r'part.cpp'
                                                 , r'ppia.cpp'
                                                 , r'cpu.cpp'
                                                 , r'terminal_interface.cpp'
-                                                , r'streambuf.cpp'
+                                                , r'atom_streambuf.cpp'
                                                 ])
 
 emulator_gui_sdl_env = common_env.Clone()
