--- a/src/SConscript
+++ b/src/SConscript
@@ -34,7 +34,8 @@ PARTSLIB = partslib_env.StaticLibrary(r'parts', [ r'part.cpp'
 
 emulator_gui_sdl_env = common_env.Clone()
 emulator_gui_sdl_env.ParseConfig("pkg-config --cflags --libs sdl2 libxml++-2.6")
-emulator_gui_sdl_env.Program('emulator', [ r'monitor_view.cpp'
+emulator_gui_sdl_env.Program('emulator', [ r'dispatcher.cpp'
+                                         , r'monitor_view.cpp'
                                          , r'keyboard_adaptor.cpp'
                                          , r'config_xml.cpp'
                                          , r'main.cpp'
