--- a/src/SConscript
+++ b/src/SConscript
@@ -20,7 +20,7 @@ common_env.Command(r'plot.bmp', r'build_plot_bmp.py',
 # Main Build
 
 common_env['CCFLAGS']   = r'-Wall -g -pipe -std=c++11 -pthread -O0 -DSERIALIZE_TO_DOT=0'
-common_env['LINKFLAGS'] = r'-pthread'
+common_env['LINKFLAGS'] = r'-g -pthread'
 common_env.ParseConfig("pkg-config --cflags --libs liblog4cxx glibmm-2.4")
 
 partslib_env = common_env.Clone()
@@ -43,3 +43,4 @@ emulator_gui_sdl_env.Program('emulator', [ r'dispatcher.cpp'
                                          ])
 
 #emulator_gui_sdl_env.Program('key', 'key.cpp')
+#emulator_gui_sdl_env.Program('test_stream', 'test_stream.cpp')
