--- a/src/log4cxx.properties
+++ b/src/log4cxx.properties
@@ -18,8 +18,7 @@ log4j.appender.roll.layout=org.apache.log4j.PatternLayout
 log4j.appender.roll.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
 log4j.logger.ctrace=WARN
-#log4j.logger.ctrace.atom_streambuf.cpp=DEBUG
-#log4j.logger.ctrace.emulator.cpp=INFO
+log4j.logger.ctrace.atom_streambuf.cpp=DEBUG
 log4j.logger.part=WARN
 log4j.logger.instruction=WARN
 log4j.logger.SDL=WARN
