--- a/src/logging.conf
+++ b/src/logging.conf
@@ -5,20 +5,26 @@
 keys=root
 
 [handlers]
-keys=consoleHandler
+keys=consoleHandler,fileHandler
 
 [formatters]
 keys=simpleFormatter
 
 [logger_root]
 level=DEBUG
-handlers=consoleHandler
+handlers=consoleHandler,fileHandler
 
 [handler_consoleHandler]
 class=StreamHandler
 level=NOTSET
 formatter=simpleFormatter
 args=(sys.stdout,)
+
+[handler_fileHandler]
+class=FileHandler
+level=NOTSET
+formatter=simpleFormatter
+args=('pytrace.log', 'w')
 
 [formatter_simpleFormatter]
 format=%(asctime)s %(name)s %(levelname)s %(message)s
